--- a/git/config
+++ b/git/config
@@ -27,10 +27,9 @@
 	required = true
 	clean = git-lfs clean -- %f
 [core]
-	excludesfile = ~/.gitignore_global
 	autocrlf = input
 [include]
-	path = ~/.gitconfig.local
+	path = ~/.config/git/config.local
 [commit]
 	template = ~/.stCommitMsg
 [pull]
