Update(Brewfile): `brew bundle dump --global --force --describe`

--- a/config/homebrew/Brewfile
+++ b/config/homebrew/Brewfile
@@ -2,6 +2,8 @@
 brew "ca-certificates"
 # Clone of cat(1) with syntax highlighting and Git integration
 brew "bat"
+# Simple, fast and user-friendly alternative to find
+brew "fd"
 # Command-line fuzzy finder written in Go
 brew "fzf"
 # GNU compiler collection
@@ -20,6 +22,12 @@ brew "gron"
 brew "grpcurl"
 # Lightweight and flexible command-line JSON processor
 brew "jq"
+# Simple terminal UI for git commands
+brew "lazygit"
+# Ambitious Vim-fork focused on extensibility and agility
+brew "neovim"
+# Search tool like grep and The Silver Searcher
+brew "ripgrep"
 # Rust toolchain installer
 brew "rustup"
 # Fast, configurable, shell plugin manager
