--- a/config/sheldon/plugins.toml
+++ b/config/sheldon/plugins.toml
@@ -28,6 +28,9 @@ github = "zsh-users/zsh-completions"
 github = "zsh-users/zsh-syntax-highlighting"
 apply = ["defer"]
 
+[plugins.zsh-history-substring-search]
+github = "zsh-users/zsh-history-substring-search"
+
 [plugins.zsh-abbr]
 github = "olets/zsh-abbr"
 
