--- a/config/homebrew/Brewfile
+++ b/config/homebrew/Brewfile
@@ -24,6 +24,8 @@ brew "grpcurl"
 brew "jq"
 # Simple terminal UI for git commands
 brew "lazygit"
+# Polyglot runtime manager (asdf rust clone)
+brew "mise"
 # Ambitious Vim-fork focused on extensibility and agility
 brew "neovim"
 # Search tool like grep and The Silver Searcher
