--- a/config/homebrew/Brewfile
+++ b/config/homebrew/Brewfile
@@ -36,6 +36,8 @@ brew "ripgrep"
 brew "rustup"
 # Fast, configurable, shell plugin manager
 brew "sheldon"
+# SQL linter and auto-formatter for Humans
+brew "sqlfluff"
 # Tail multiple Kubernetes pods & their containers
 brew "stern"
 # Display directories as trees (with optional color/HTML output)
