--- a/config/homebrew/Brewfile
+++ b/config/homebrew/Brewfile
@@ -2,6 +2,8 @@
 brew "ca-certificates"
 # Clone of cat(1) with syntax highlighting and Git integration
 brew "bat"
+# Load/unload environment variables based on $PWD
+brew "direnv"
 # Simple, fast and user-friendly alternative to find
 brew "fd"
 # Command-line fuzzy finder written in Go
