add: zsh-dircycle that Zsh plugins

--- a/config/sheldon/plugins.toml
+++ b/config/sheldon/plugins.toml
@@ -37,6 +37,9 @@ github = "olets/zsh-abbr"
 [plugins.zsh-autopair]
 github = "hlissner/zsh-autopair"
 
+[plugins.dircycle]
+github = "michaelxmcbride/zsh-dircycle"
+
 # For example:
 #
 # [plugins.base16]
