install: tmux and adding a little settings

--- a/config/homebrew/Brewfile
+++ b/config/homebrew/Brewfile
@@ -42,6 +42,8 @@ brew "sheldon"
 brew "sqlfluff"
 # Tail multiple Kubernetes pods & their containers
 brew "stern"
+# Terminal multiplexer
+brew "tmux"
 # Display directories as trees (with optional color/HTML output)
 brew "tree"
 # Vi 'workalike' with many additional features
