chore(tmux): change prefix key and add comments for clarity

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,5 +1,17 @@
-# Set vi mode for copy mode in tmux
-setw -g mode-keys vi
+# Tmux Configuration File
 
-# Enable mouse support in tmux
-set-option -g mouse on
+## NOTE: Use aliases instead of full command names where possible for brevity.
+
+
+# General Settings
+
+## Set prefix key to Ctrl-j instead of default Ctrl-b
+unbind C-b
+set -g prefix C-j
+bind C-j send-prefix
+
+## Enable mouse support
+set -g mouse on
+
+## Set vi mode for copy mode
+setw -g mode-keys vi
