update(tmux): add settings tmux.conf

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -10,8 +10,61 @@ unbind C-b
 set -g prefix C-j
 bind C-j send-prefix
 
+## Set base index to 1 instead of 0
+set -g base-index 1
+set -g renumber-windows on
+setw -g pane-base-index 1
+
 ## Enable mouse support
 set -g mouse on
 
+## Enable focus events to allow tmux to respond to terminal focus changes
+set -g focus-events on
+
 ## Set vi mode for copy mode
 setw -g mode-keys vi
+
+
+# Pane Navigation Shortcuts
+
+## Easier pane navigation using vim-style keys
+bind -N "[MY] Move to left pane"  h select-pane -L
+bind -N "[MY] Move to down pane"  j select-pane -D
+bind -N "[MY] Move to up pane"    k select-pane -U
+bind -N "[MY] Move to right pane" l select-pane -R
+
+## Resize panes using vim-style keys with Shift
+bind -N "[MY] Resize pane left"  -r H resize-pane -L 5
+bind -N "[MY] Resize pane down"  -r J resize-pane -D 5
+bind -N "[MY] Resize pane up"    -r K resize-pane -U 5
+bind -N "[MY] Resize pane right" -r L resize-pane -R 5
+
+
+# Color and Appearance Settings
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
+
+# Pane Customization
+
+## Active and inactive window styles
+set -g window-style "bg=default,fg=colour242"
+set -g window-active-style 'bg=default,fg=colour255'
+
+## To visually indicate which pane is active, change the border color of the active pane.
+set -g pane-border-style "bg=default,fg=colour242"
+set -g pane-active-border-style "bg=default,fg=blue"
+
+set -g pane-border-status "top"
+set -g pane-border-lines "heavy"
+set -g pane-border-format "#[bg=default,fg=colour242]#{?pane_active,#[bg=blue]#[fg=brightblue]#[bold],} #P #[default]"
+
+
+# Status Bar Customization
+set -g status-interval 1
+
+set -g status-style "bg=default,fg=colour242"
+
+setw -g window-status-separator ""
+setw -g window-status-format " #I:#W "
+setw -g window-status-current-format "#[bg=blue,fg=brightblue]#{?client_prefix,#[reverse]#[italics],} #I:#W #[default]"
