refactor(tmux): tmux.conf

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,70 +1,91 @@
+# ==============================================================================
 # Tmux Configuration File
+# NOTE: Prefer command aliases for brevity (bind, set, etc.).
+# ==============================================================================
 
-## NOTE: Use aliases instead of full command names where possible for brevity.
+# ------------------------------------------------------------------------------
+# 1. General Settings
+# ------------------------------------------------------------------------------
 
-
-# General Settings
-
-## Set prefix key to Ctrl-j instead of default Ctrl-b
+# Prefix key configuration (C-b -> C-j)
 unbind C-b
 set -g prefix C-j
 bind C-j send-prefix
 
-## Set base index to 1 instead of 0
+# Start index at 1 instead of 0
 set -g base-index 1
-set -g renumber-windows on
 setw -g pane-base-index 1
 
-## Enable mouse support
+# Renumber windows when one is closed
+set -g renumber-windows on
+
+# Enable mouse support
 set -g mouse on
 
-## Enable focus events to allow tmux to respond to terminal focus changes
+# Enable focus events (recommended for vim/neovim)
 set -g focus-events on
 
-## Set vi mode for copy mode
+# Use vi-style key bindings in copy mode
 setw -g mode-keys vi
 
 
-# Pane Navigation Shortcuts
+# ------------------------------------------------------------------------------
+# 2. Key Bindings
+# ------------------------------------------------------------------------------
 
-## Easier pane navigation using vim-style keys
-bind -N "[MY] Move to left pane"  h select-pane -L
-bind -N "[MY] Move to down pane"  j select-pane -D
-bind -N "[MY] Move to up pane"    k select-pane -U
-bind -N "[MY] Move to right pane" l select-pane -R
+# [MY] Pane navigation (Vim-style)
+bind -N "[MY] Select left pane"  h select-pane -L
+bind -N "[MY] Select down pane"  j select-pane -D
+bind -N "[MY] Select up pane"    k select-pane -U
+bind -N "[MY] Select right pane" l select-pane -R
 
-## Resize panes using vim-style keys with Shift
-bind -N "[MY] Resize pane left"  -r H resize-pane -L 5
-bind -N "[MY] Resize pane down"  -r J resize-pane -D 5
-bind -N "[MY] Resize pane up"    -r K resize-pane -U 5
-bind -N "[MY] Resize pane right" -r L resize-pane -R 5
+# [MY] Pane resizing (Vim-style, Repeatable)
+bind -r -N "[MY] Resize pane left"  H resize-pane -L 5
+bind -r -N "[MY] Resize pane down"  J resize-pane -D 5
+bind -r -N "[MY] Resize pane up"    K resize-pane -U 5
+bind -r -N "[MY] Resize pane right" L resize-pane -R 5
 
 
-# Color and Appearance Settings
+# ------------------------------------------------------------------------------
+# 3. Appearance: Terminal
+# ------------------------------------------------------------------------------
+
+# Set terminal type for correct colors
 set -g default-terminal "tmux-256color"
+
+# Enable TrueColor (24-bit) support
 set -ag terminal-overrides ",xterm-256color:RGB"
 
 
-# Pane Customization
+# ------------------------------------------------------------------------------
+# 4. Appearance: Panes
+# ------------------------------------------------------------------------------
 
-## Active and inactive window styles
+# Window styles (Dim inactive panes)
 set -g window-style "bg=default,fg=colour242"
-set -g window-active-style 'bg=default,fg=colour255'
+set -g window-active-style "bg=default,fg=colour255"
 
-## To visually indicate which pane is active, change the border color of the active pane.
+# Pane border styles
 set -g pane-border-style "bg=default,fg=colour242"
 set -g pane-active-border-style "bg=default,fg=blue"
 
+# Pane border status and format
 set -g pane-border-status "top"
 set -g pane-border-lines "heavy"
 set -g pane-border-format "#[bg=default,fg=colour242]#{?pane_active,#[bg=blue]#[fg=brightblue]#[bold],} #P #[default]"
 
 
-# Status Bar Customization
-set -g status-interval 1
+# ------------------------------------------------------------------------------
+# 5. Appearance: Status Bar
+# ------------------------------------------------------------------------------
 
+# General status bar settings
+set -g status-interval 1
 set -g status-style "bg=default,fg=colour242"
 
+# Window status format
 setw -g window-status-separator ""
 setw -g window-status-format " #I:#W "
+
+# Current window status format (Highlight & Italics on prefix)
 setw -g window-status-current-format "#[bg=blue,fg=brightblue]#{?client_prefix,#[reverse]#[italics],} #I:#W #[default]"
