update(tmux): add settings for Vim

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -7,6 +7,13 @@
 # 1. General Settings
 # ------------------------------------------------------------------------------
 
+# Remove delay for exiting insert mode in Vim (Default is 500ms)
+set -s escape-time 0
+
+# Increase scrollback buffer size to practical maximum
+# NOTE: Values higher than 50000-100000 can cause high memory usage
+set -g history-limit 50000
+
 # Prefix key configuration (C-b -> C-j)
 unbind C-b
 set -g prefix C-j
@@ -44,6 +51,9 @@ bind -r -N "[MY] Resize pane left"  H resize-pane -L 5
 bind -r -N "[MY] Resize pane down"  J resize-pane -D 5
 bind -r -N "[MY] Resize pane up"    K resize-pane -U 5
 bind -r -N "[MY] Resize pane right" L resize-pane -R 5
+
+# [MY] Copy Mode
+bind -T copy-mode-vi -N "[MY] Begin selection" v send -X begin-selection
 
 
 # ------------------------------------------------------------------------------
