--- a/config/homebrew/Brewfile
+++ b/config/homebrew/Brewfile
@@ -40,6 +40,8 @@ brew "rustup"
 brew "sheldon"
 # SQL linter and auto-formatter for Humans
 brew "sqlfluff"
+# Cross-shell prompt for astronauts
+brew "starship"
 # Tail multiple Kubernetes pods & their containers
 brew "stern"
 # Terminal multiplexer
