update(tmux): increase status-left length to 100

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -93,6 +93,9 @@ set -g pane-border-format "#[bg=default,fg=colour242]#{?pane_active,#[bg=blue]#[
 set -g status-interval 1
 set -g status-style "bg=default,fg=colour242"
 
+# Increase status-left length
+set -g status-left-length 100
+
 # Window status format
 setw -g window-status-separator ""
 setw -g window-status-format " #I:#W "
