update(tmux): increase status-right length and display tmux version

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -100,5 +100,9 @@ set -g status-left-length 100
 setw -g window-status-separator ""
 setw -g window-status-format " #I:#W "
 
+# Increase status-right length
+set -g status-right-length 20
+set -g status-right " tmux #{version} "
+
 # Current window status format (Highlight & Italics on prefix)
 setw -g window-status-current-format "#[bg=blue,fg=brightblue]#{?client_prefix,#[reverse]#[italics],} #I:#W #[default]"
