update(tmux): enhance pane border format to display current path with home shorthand

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -82,7 +82,7 @@ set -g pane-active-border-style "bg=default,fg=blue"
 # Pane border status and format
 set -g pane-border-status "top"
 set -g pane-border-lines "heavy"
-set -g pane-border-format "#[bg=default,fg=colour242]#{?pane_active,#[bg=blue]#[fg=brightblue]#[bold],} #P #[default]"
+set -g pane-border-format "#[bg=default,fg=colour242]#{?pane_active,#[bg=blue]#[fg=brightblue]#[bold],} #P #(echo '#{pane_current_path}' | perl -pe 's|^$HOME|~|; s|/([.]?.)[^/]*(?=/)|/\$1|g') #[default]"
 
 
 # ------------------------------------------------------------------------------
