update(tmux): enable repeatable pane navigation key bindings

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -41,10 +41,10 @@ setw -g mode-keys vi
 # ------------------------------------------------------------------------------
 
 # [MY] Pane navigation (Vim-style)
-bind -N "[MY] Select left pane"  h select-pane -L
-bind -N "[MY] Select down pane"  j select-pane -D
-bind -N "[MY] Select up pane"    k select-pane -U
-bind -N "[MY] Select right pane" l select-pane -R
+bind -r -N "[MY] Select left pane"  h select-pane -L
+bind -r -N "[MY] Select down pane"  j select-pane -D
+bind -r -N "[MY] Select up pane"    k select-pane -U
+bind -r -N "[MY] Select right pane" l select-pane -R
 
 # [MY] Pane resizing (Vim-style, Repeatable)
 bind -r -N "[MY] Resize pane left"  H resize-pane -L 5
