--- a/config/homebrew/Brewfile
+++ b/config/homebrew/Brewfile
@@ -16,6 +16,8 @@ brew "gh"
 brew "ghq"
 # Distributed revision control system
 brew "git"
+# Syntax-highlighting pager for git and diff output
+brew "git-delta"
 # Render markdown on the CLI
 brew "glow"
 # Make JSON greppable
